# Logi

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc  run-tests.ps1  version.json
components/: CustomTitleBar.qml  LogEntryViewer.qml  PvPToggleSwitch.qml  ResizeCorner.qml  SettingsDialog.qml  SettingsWindow.qml  StatusIndicator.qml  UpdateBanner.qml  UpdateProgressDialog.qml  qmldir
installer/: build_installer.bat  build_installer_inno.bat  logi-setup.iss
installer/config/: config.xml  controlscript.qs  style.qss
scripts/: check_build_time.ps1  prepare_release.bat
src/: LogReader.cpp  LogReader.h  ProcessChecker.cpp  ProcessChecker.h  Settings.cpp  Settings.h  UpdateChecker.cpp  UpdateChecker.h
styles/: Theme.js
tests/: CMakeLists.txt  MockUpdateServer.cpp  MockUpdateServer.h  README.md  test_version_required.json  tst_updatechecker.cpp
tests/update_test/: README.md  start_test_server.bat  test_server.py  test_silent_update.bat  test_version.json
